# ArtificialQI

./: README.md  compose.yaml
back-end/: .gitignore  Dockerfile  backend.py  pyproject.toml  tempCodeRunnerFile.py
back-end/ArtificialQI/adapter/: dataset_service.py  llm_service.py  qa_service.py  sql_alchemy_dataset_adapter.py  test_result_service.py  test_service.py
back-end/ArtificialQI/common/: exceptions.py
back-end/ArtificialQI/core/: comunication_config.py  config.py  dataset.py  dataset_factory.py  embeddings_llm_test_method.py  http_config.py  http_key_value_pair.py  key_value_list.py  llm.py  llm_config.py  page.py  question_answer_pair.py  test.py  test_algorithm.py  test_factory.py  test_result.py  test_statistics.py  test_template_method.py  url.py
back-end/ArtificialQI/entry_point/: app.py  container.py  dataset_blueprint.py
back-end/adapter/: dataset_repository.py  question_answer_pair_adapter.py  question_answer_pair_repository.py  sql_alchemy_dataset_adapter.py  test_repository.py
back-end/components/: dataset_dto_mapper.py  dataset_list_dto_mapper.py  dataset_page_dto_mapper.py  question_answer_pair_dto_mapper.py  test_page_dto_mapper.py
back-end/core/: dataset_state.py
back-end/models/: dataset_service.py  dataset_use_case.py  qa_service.py  qa_use_case.py  saved_state.py  working_copy_state.py
back-end/port/: dataset.py  page.py  question_answer_pair.py
back-end/tools/: dataset_dto.py  dataset_list_dto.py  dataset_name.py  dataset_page_dto.py  handle_exceptions.py  question_answer_pair_dto.py  test_page_dto.py  test_result_dto.py
(+365 files in other folders)
